# tardigrade-gwas

./: .gitignore  CONTRIBUTORS.md  LICENSE  README.md  README.txt  RELEASE_NOTES.md  Tardigrade-Linux-x86_64-v1.0.1.sha256  Tardigrade-Windows-x64-v1.0.1.sha256  Tardigrade.py  exceptions.py  io.py  pyproject.toml  requirements.txt
src/: __init__.py  analysis.py  api.py  constants.py  genes.py  models.py  plotting.py
