[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tardigrade-gwas"
version = "1.0.1"
description = "Multi-GWAS gene-overlap analysis, similarity heatmaps, Circos-style visualization, and reporting."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Amir Izadi" },
  { name = "Zahra Aghabeygi" },
]
keywords = ["GWAS", "genomics", "bioinformatics", "gene overlap", "circos", "heatmap"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/zahraaghabeygi/tardigrade-gwas"
Repository = "https://github.com/zahraaghabeygi/tardigrade-gwas"
Issues = "https://github.com/zahraaghabeygi/tardigrade-gwas/issues"
PyPI = "https://pypi.org/project/tardigrade-gwas/"
